# scratch-test-model

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-docs-to-pages.yml
sb3/: README.md  all-predefined-blocks.json  all-predefined-blocks.sb3  colors.sb3  mixed-variable-control-displays-boolean-values.sb3  mixed-variable-control-displays-number-values.sb3  my-blocks.json  my-blocks.sb3  pen-extension-blocks.json  pen-extension-blocks.sb3  scratch-semanstics-2.sb3  text2speech.json  text2speech.sb3
sb3/archive/: first.sb3  second.sb3
scratch-test-model-proc/: Cargo.toml
scratch-test-model-proc/src/: lib.rs  parse_impls.rs  valid_attributes.rs
src/: aux.rs  blocks.rs  constants.rs  error.rs  ext.rs  lib.rs  reader.rs  scopes.rs
src/ast/: mod.rs
src/attrs/: broadcast_id.rs  color.rs  data.rs  dropdowns.rs  expression.rs  mod.rs  string_helper.rs
src/aux/: constants.rs  do_for_attrs.rs  errors.rs  json_ctx.rs  location.rs  opcode_trait.rs  parse_attr.rs  parse_block.rs
src/blocks/: any.rs  comparisons.rs  datatypes.rs  dt_interface.rs  error.rs  events.rs  expr_or_cmp.rs  expressions.rs  implementations.rs  mod.rs  parse_procedures.rs  parsing.rs  procedures.rs  serde_any_unit.rs  statements.rs  test_events.rs
src/interpret_json/: _cmp_using_display.rs  _macros.rs  argument_reporter.rs  block_ref.rs  data_error.rs  datatypes.rs  dropdown.rs  expression.rs  format_error.rs  list.rs  mod.rs  number_utils.rs  variable.rs
src/scopes/: block_wrapper.rs  custom_blocks.rs  error.rs  mod.rs  project_doc.rs  target.rs  target_blocks.rs  target_data.rs  target_lists.rs  target_procedures.rs  (+1 more)
tests/: all-standard-blocks.rs  extension-blocks.rs  mixed-variable-control-displays.rs  parse-byte-vec.rs  pen-extension-blocks.rs  serde_block_kind_opcode.rs  try-parsing-further.rs
(+49 files in other folders)
