[package]
name = "scratch-test-model"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0"
thiserror = "2"
derive_more = { version = "2.0.1", features = ["display", "from", "debug", "deref"] }
zip = { version = "5.1.1", optional = true, default-features = false, features = ["deflate64", "deflate"] }
log = "0.4.28"
derive-getters = "0.5.0"
const-str = { version = "0.7.0", default-features = false }
itertools = "0.14.0"

[dev-dependencies]
walkdir = "2.5.0"
rayon = "1.11.0"

[features]
default = ["sb3"]
sb3 = [ "dep:zip" ]
